# fsc-lib

./: .coveragerc  .gitreview  .stestr.conf  .zuul.yaml  HACKING.rst  README.rst  requirements.txt  setup.cfg  tox.ini
doc/: requirements.txt
doc/ext/: apidoc.py
doc/source/: conf.py  index.rst
doc/source/contributor/: index.rst
doc/source/user/: index.rst  transition.rst
fsc_lib/: __init__.py  clientmanager.py  exceptions.py  i18n.py  shell.py  version.py
fsc_lib/api/: api.py  auth.py
fsc_lib/cli/: client_config.py  format_columns.py  identity.py  parseractions.py
fsc_lib/command/: command.py  commandmanager.py  timing.py
fsc_lib/tests/: fakes.py  test_clientmanager.py  test_logs.py  test_shell.py
fsc_lib/tests/api/: fakes.py  test_api.py  test_utils.py
fsc_lib/tests/cli/: test_client_config.py  test_format_columns.py  test_identity.py  (+1 more)
fsc_lib/utils/: __init__.py  tags.py
releasenotes/notes/: 1.0-summary-47dcce446d6a512b.yaml  add_sdk_utils-d0c338eba682f2c8.yaml  arg-precedence-1ba9fd6929650830.yaml  auth-type-none-d96760912605f822.yaml  bug-1630822-mask-password-on-debug-20dcdf1c54e84fa1.yaml  bug-2004898-686577a07e791051.yaml  bug-2006480-436489d39643e76c.yaml  direct-openstacksdk-535a179f3c645cc0.yaml  drop-py2-support-60c93244107d5778.yaml  find-project-203bf867619c557e.yaml  keystone-to-keystone-9b2e55b051775322.yaml  none-auth-cli-48ab0e48d4852941.yaml  os-profile-as-environment-variable-a5e232e9ca7c5171.yaml  remove-group-subclass-82134e6915c7c782.yaml  shell-argv-decode-cdc13dc0c4ec07af.yaml
releasenotes/source/: conf.py  index.rst
(+6 files in other folders)
