[metadata]
name = fsc-lib
summary = fibostackclient Library
description_file =
    README.rst
author = FiboStack
author_email = fibostack-discuss@lists.fibostack.org
url = https://docs.fibostack.org/fsc-lib/latest/
project_urls =
    Bug Tracker = https://storyboard.fibostack.org/#!/project/fibostack/fsc-lib
    Documentation = https://docs.fibostack.org/fsc-lib/latest/
    Source Code = https://opendev.org/fibostack/fsc-lib/
python_requires = >=3.8
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: bulgantamir
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[files]
packages =
    fsc_lib
